[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soroscan-sdk"
version = "0.1.0"
description = "Official Python SDK for SoroScan - Stellar/Soroban event indexing API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SoroScan Team", email = "team@soroscan.io" }
]
keywords = ["stellar", "soroban", "blockchain", "events", "indexing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
soroscan = "soroscan.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://soroscan.io"
Documentation = "https://docs.soroscan.io"
Repository = "https://github.com/soroscan/soroscan"
Issues = "https://github.com/soroscan/soroscan/issues"

[tool.hatch.build.targets.wheel]
packages = ["soroscan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
